# Switchipy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  setup.py  switchipy_cli.py  test_runner.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: basic-tests.yml  ci-tests.yml  release.yml  simple-tests.yml  test.yml
docs/: API.md  CLI.md  DEVELOPMENT.md  ICONS.md  INSTALLATION.md
examples/: cron_theme_switcher.sh  implement_improvements.py  test_icons.py  theme_automation.py
scripts/: autostart.sh  enable_autostart.py  install.py  install.sh  uninstall.py  uninstall.sh
scripts/autostart/: switchipy-gnome.desktop  switchipy-i3.sh  switchipy-openbox.sh
switchipy/: __init__.py  autoswitch.py  cli.py  config.py  config_enhanced.py  hotkey.py  icons.py  logging_config.py  performance.py  themes.py  utils.py  ux_enhancements.py
templates/: config.json  switchipy.desktop
tests/: test_all.py  test_config.py  test_hotkey.py  test_icons.py  test_themes.py
